tests/fixtures/valid/test_func.cyl
import fs;
import string;

fn main() -> void {
    let x = 42;
}
