tests/fixtures/invalid/mismatched_parens.cyl
// Mismatched parentheses
fn test() {
    let x = (1 + 2;
}
